[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/shields/Shield/Shield.material" type="Material" id=1]
[ext_resource path="res://objects/shields/Shield/Shield.gd" type="Script" id=2]
[ext_resource path="res://tools/combat/HitBox/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://tools/combat/CombatStats/CombatStats.tscn" type="PackedScene" id=4]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SphereShape" id=2]

[node name="Shield" type="MeshInstance"]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
combat_stats = NodePath("../CombatStats")

[node name="CollisionShape" parent="HitBox" index="0"]
shape = SubResource( 2 )

[node name="CombatStats" parent="." instance=ExtResource( 4 )]
max_health = 10

[node name="ReloadTimer" type="Timer" parent="."]
[connection signal="health_changed" from="CombatStats" to="." method="_on_CombatStats_health_changed"]
[connection signal="health_depleted" from="CombatStats" to="." method="disable"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]

[editable path="HitBox"]
